@@ -62,3 +62,5 @@
 	* Added a 'Stream Statistics' page.
 2016-02-17 Fred Gleason <fredg@paravelsystems.com>
 	* Added a stream metadata section to the 'Player' page.
+2016-02-18 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the glassplayer version to 0.6.5.
